# udpipe-rs

./: .clang-tidy  .clangd  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .yamlfmt  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-APACHE-2.0  LICENSE-MIT  Makefile  README.md  SECURITY.md  build.rs  compile_flags.txt  deny.toml  justfile  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: parse.rs
examples/: download_model.rs  parse_text.rs
include/: udpipe_wrapper.h
src/: lib.rs  udpipe_wrapper.cpp  udpipe_wrapper.h
tests/: integration.rs
