[package]
name = "udpipe-rs"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["Christopher Costello"]
description = "Rust bindings for UDPipe - a trainable pipeline for tokenization, tagging, lemmatization and dependency parsing of CoNLL-U files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ccostello97/udpipe-rs"
documentation = "https://docs.rs/udpipe-rs"
keywords = ["nlp", "parsing", "udpipe", "dependency-parsing", "pos-tagging"]
categories = ["text-processing", "science"]
readme = "README.md"

[workspace]
members = ["."]

[lints.rust]
# Groups (priority -1 so individual lints can override)
rust_2024_compatibility = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }

# Individual lints
unsafe_code = "allow"  # Required for FFI bindings
missing_docs = "deny"
missing_debug_implementations = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[lints.clippy]
# Groups (priority -1 so individual lints can override)
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Restriction lints (enabled individually instead of the full group)
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
unimplemented = "deny"
mem_forget = "deny"
missing_docs_in_private_items = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
str_to_string = "deny"
implicit_clone = "deny"
verbose_file_reads = "deny"
single_call_fn = "deny"
unseparated_literal_suffix = "deny"

[lib]
bench = false

[build-dependencies]
cc = "1.2.56"

[features]
default = []
# Fetch pre-trained models over HTTP (adds ureq).
download = ["dep:ureq"]

[dependencies]
ureq = { version = "3.2.0", optional = true }

[dev-dependencies]
tempfile = "3.15"
mockito = "1.7.2"
criterion = "0.8.2"

[[example]]
name = "download_model"
required-features = ["download"]

[[bench]]
name = "parse"
harness = false
required-features = ["download"]
